--- a/index.html
+++ b/index.html
@@ -1,14 +1,14 @@
 <!DOCTYPE html>
 <head>
-    <title>HOME PAGE</title>
+    <title>Manmadhan anbu</title>
     <style>
         h1{
             text-align: center;
-            color: bisque;
+            color: rgb(12, 11, 11);
         }
         p{
             text-align: center;
-            color:blanchedalmond;
+            color:rgb(0, 0, 0);
         }
     </style>
     <script>
@@ -16,6 +16,7 @@
     </script>
 </head>
 <bpdy>
-    <h1>SURESH TRADEING CENTER</h1>
-    <p>KAASU EDUTHUTU VAGGA 10X MONEYEUDO POGGA</p>
+    <h1>pavith manmadhan</h1>
+    <p>Love service free</p>
+    <img src="pavith.png">
 </bpdy>
