--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     </script>
 </head>
 <bpdy>
-    <h1>pavith manmadhan</h1>
+    <h1>pavith GK</h1>
     <p>Love service free</p>
     <img src="pavith.png">
 </bpdy>
